# PosiTron

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Cybertron/: .pre-commit-config.yaml  main.py  mainn.py  mod.py  test.py
Cybertron/PositionEncondings/: __init__.py  absolutePE.py  alibi.py  relativePE.py  rotaryPE.py
Cybertron/factories/: ModelFactory.py
Cybertron/factory/: __init__.py
Cybertron/layers/: Attention.py  Decoder.py  utils.py
Cybertron/models/: __init__.py  model.py
Cybertron/train/: trainer.py  utils.py
PosiTron/: ModelFactory.py  __init__.py  main.py  models.py
PosiTron/PositionEncondings/: __init__.py  rotaryPE.py
PosiTron/layers/: Attention.py  Encoder.py  __init__.py  core.py  utils.py
PosiTron/models/: __init__.py
PosiTron/positional_encodings/: alibi.py
PosiTron/train/: __init__.py  inference.py  loss.py  trainer.py  utils.py
optimus_prime/: Attention.py  Encoder.py  General.py  main.py  models.py  position_embeddeding.py  utils.py
