[project]
name = "PosiTron"
version = "0.1.0"
description = "Implenment Attention is All you need paper with different positional encodings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "gputil>=1.4.0",
    "pandas>=2.1.4",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "spacy>=3.7.6",
    "torch>= 2.4.1+cu121",
    "torchtext>=0.18.0",
    "tqdm>=4.66.5",
    "wandb>=0.18.6",
]





